# transistor_rm2026_radar

./: .gitignore  2.14.0  ArmorDetector.py  CRC.py  Camera.py  CommunicationAndGuess_ModifiedFromPFA.py  CoordinateConversions.py  FakeSerial.py  LivoxCtypesInterface.py  NOTICE  YOLOResultsFilter.py  main.py  requirements.txt  todoList.txt  train.py  useconda.txt  utils.py
MvImport/: CameraParams_header.py  MvCameraControl_class.py
ctypes/Livox/: CMakeLists.txt
ctypes/Livox/mycode/livox_python_interface/: CMakeLists.txt  main.c
ctypes/Livox/sample/lidar/: CMakeLists.txt
ctypes/Livox/sdk_core/: CMakeLists.txt
rmArmor_yolov12n_int8_openvino_model/: metadata.yaml  rmArmor_yolov12n.xml
rmCar_yolov12n_int8_openvino_model/: metadata.yaml  rmCar_yolov12n.xml
